--- a/fl_config.json
+++ b/fl_config.json
@@ -1,7 +1,8 @@
 
 {
     "project_name": "my_cool_fl_proj",
-    "participants": ["b@openmined.org", "c@openmined.org"],
+    "aggregator": "a@openmined.org",
+    "participants": ["b@openmined.org"],
     "rounds": 3,
     "model_arch": "model_arch.py",
     "model_weight": "global_model_weight.pt",
