--- a/fl_aggregator/samples/fl_config.json
+++ b/fl_aggregator/samples/fl_config.json
@@ -3,9 +3,13 @@
     "project_name": "my_cool_fl_proj",
     "aggregator": "a@openmined.org",
     "participants": ["b@openmined.org","c@openmined.org"],
-    "rounds": 3,
+    
     "model_arch": "model_arch.py",
+    "model_class_name": "FLModel",
     "model_weight": "global_model_weight.pt",
+    "test_dataset": "mnist_test_dataset.pt",
+
+    "rounds": 3,
     "epoch": 10,
     "learning_rate": 0.1
 }
